c/src/cmavsdk/plugins/shell/shell.h

// WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
// Edits need to be made to the proto files
// (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/shell/shell.proto)

#ifndef CMAVSDK_SHELL_H
#define CMAVSDK_SHELL_H

#include <stddef.h>
#include <stdint.h>
#include <stdbool.h>
#include "cmavsdk/mavsdk_export.h"

#ifdef __cplusplus
extern "C" {
#endif

/**
 * @brief Allow to communicate with the vehicle's system shell.
 *
 * Under the hood this uses MAVLink SERIAL_CONTROL. The default device is
 * SERIAL_CONTROL_DEV_SHELL. Callers can pass another SERIAL_CONTROL_DEV on
 * Send (and observe the device on Receive) when the same framing is used for
 * non-nsh serial bridges (for example TELEM2).
 */

// ===== Forward Declarations =====
typedef struct mavsdk_system_s *mavsdk_system_t;

// ===== Opaque Handles =====
typedef struct mavsdk_shell_s *mavsdk_shell_t;
typedef struct mavsdk_shell_receive_handle_s *mavsdk_shell_receive_handle_t;

// ===== Enums =====
/**
 * @brief MAVLink SERIAL_CONTROL_DEV values used by the shell plugin.
 */
typedef enum {
    /**  SERIAL_CONTROL_DEV_TELEM1. */
    MAVSDK_SHELL_DEVICE_TELEM1 = 0,
    /**  SERIAL_CONTROL_DEV_TELEM2. */
    MAVSDK_SHELL_DEVICE_TELEM2 = 1,
    /**  SERIAL_CONTROL_DEV_GPS1. */
    MAVSDK_SHELL_DEVICE_GPS1 = 2,
    /**  SERIAL_CONTROL_DEV_GPS2. */
    MAVSDK_SHELL_DEVICE_GPS2 = 3,
    /**  SERIAL_CONTROL_DEV_SHELL (default). */
    MAVSDK_SHELL_DEVICE_SHELL = 4,
    /**  SERIAL_CONTROL_SERIAL0. */
    MAVSDK_SHELL_DEVICE_SERIAL0 = 5,
    /**  SERIAL_CONTROL_SERIAL1. */
    MAVSDK_SHELL_DEVICE_SERIAL1 = 6,
    /**  SERIAL_CONTROL_SERIAL2. */
    MAVSDK_SHELL_DEVICE_SERIAL2 = 7,
    /**  SERIAL_CONTROL_SERIAL3. */
    MAVSDK_SHELL_DEVICE_SERIAL3 = 8,
    /**  SERIAL_CONTROL_SERIAL4. */
    MAVSDK_SHELL_DEVICE_SERIAL4 = 9,
    /**  SERIAL_CONTROL_SERIAL5. */
    MAVSDK_SHELL_DEVICE_SERIAL5 = 10,
    /**  SERIAL_CONTROL_SERIAL6. */
    MAVSDK_SHELL_DEVICE_SERIAL6 = 11,
    /**  SERIAL_CONTROL_SERIAL7. */
    MAVSDK_SHELL_DEVICE_SERIAL7 = 12,
    /**  SERIAL_CONTROL_SERIAL8. */
    MAVSDK_SHELL_DEVICE_SERIAL8 = 13,
    /**  SERIAL_CONTROL_SERIAL9. */
    MAVSDK_SHELL_DEVICE_SERIAL9 = 14,
} mavsdk_shell_device_t;


// ===== Structs =====
/**
 * @brief 
 *
 * @note This struct may contain dynamically allocated memory. Always call
 *       mavsdk_shell_receive_destroy() when done to avoid memory leaks.
 */
typedef struct CMAVSDK_EXPORT {
    /**  Received data. */
    char* data;
    /**  */
    mavsdk_shell__t device;
} mavsdk_shell_receive_t;

/**
 * @brief Destroy a receive struct.
 *
 * Frees all memory allocated by MAVSDK for this struct, including any
 * dynamically allocated arrays or strings. Must be called to avoid memory leaks.
 * Always call this function when done with the struct, even if it currently
 * contains no dynamic allocations.
 *
 * @param target Pointer to the struct to destroy. Can be NULL (no-op).
 */
CMAVSDK_EXPORT void mavsdk_shell_receive_destroy(
    mavsdk_shell_receive_t* target);

/**
 * @brief Destroy an array of receive structs.
 *
 * Frees all memory allocated for the array and its elements, including any
 * nested dynamic allocations. Must be called to avoid memory leaks.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 * @param size Number of elements in the array.
 */
CMAVSDK_EXPORT void mavsdk_shell_receive_array_destroy(
    mavsdk_shell_receive_t** array,
    size_t size);

/**
 * @brief Possible results returned for shell requests
 */
typedef enum {
    /**  Unknown result. */
    MAVSDK_SHELL_RESULT_UNKNOWN = 0,
    /**  Request succeeded. */
    MAVSDK_SHELL_RESULT_SUCCESS = 1,
    /**  No system is connected. */
    MAVSDK_SHELL_RESULT_NO_SYSTEM = 2,
    /**  Connection error. */
    MAVSDK_SHELL_RESULT_CONNECTION_ERROR = 3,
    /**  Response was not received. */
    MAVSDK_SHELL_RESULT_NO_RESPONSE = 4,
    /**  Shell busy (transfer in progress). */
    MAVSDK_SHELL_RESULT_BUSY = 5,
    /**  Invalid device / argument. */
    MAVSDK_SHELL_RESULT_INVALID_ARGUMENT = 6,
} mavsdk_shell_result_t;



// ===== Primitive Array Destroy Functions =====
/**
 * @brief Destroy an array of float.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_float_array_destroy(float** array);
/**
 * @brief Destroy an array of double.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_double_array_destroy(double** array);
/**
 * @brief Destroy an array of int32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_int32t_array_destroy(int32_t** array);
/**
 * @brief Destroy an array of uint32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_uint32t_array_destroy(uint32_t** array);
/**
 * @brief Destroy an array of int64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_int64t_array_destroy(int64_t** array);
/**
 * @brief Destroy an array of uint64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_uint64t_array_destroy(uint64_t** array);
/**
 * @brief Destroy an array of bool.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_bool_array_destroy(bool** array);

/**
 * @brief Destroy a string (char*).
 *
 * Frees the memory allocated for the string.
 *
 * @param str Pointer to the string pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_string_destroy(char** str);

/**
 * @brief Destroy a byte buffer (uint8_t*).
 *
 * Frees the memory allocated for the byte buffer.
 *
 * @param buffer Pointer to the buffer pointer. Will be set to NULL after freeing.
 */
CMAVSDK_EXPORT void mavsdk_shell_byte_buffer_destroy(uint8_t** buffer);

// ===== Callback Typedefs =====
typedef void (*mavsdk_shell_receive_callback_t)(const mavsdk_shell__t receive, void* user_data);

// ===== Shell Creation/Destruction =====
CMAVSDK_EXPORT mavsdk_shell_t mavsdk_shell_create(mavsdk_system_t system);
CMAVSDK_EXPORT void mavsdk_shell_destroy(mavsdk_shell_t shell);

// ===== Methods =====

/**
 * @brief Get the current send (blocking).
 *
 * This function blocks until a value is available.
 *
 * @param telemetry The telemetry instance.
 * @param send_out Pointer to store the result.
 */
CMAVSDK_EXPORT
mavsdk_shell_result_t
mavsdk_shell_send(
    mavsdk_shell_t shell,
    char* command,
    mavsdk_shell__t device);


/**
 * @brief Receive feedback from a sent command line.
 * 
 *  This subscription needs to be made before a command line is sent, otherwise, no response will be sent.
 *
 * @param shell The shell instance.
 *
 * @param callback Function to call when new data is available.
 * @param user_data User data to pass to the callback.
 * @return Handle for this subscription. Use mavsdk_shell_unsubscribe_receive() to unsubscribe.
 */
CMAVSDK_EXPORT mavsdk_shell_receive_handle_t mavsdk_shell_subscribe_receive(
    mavsdk_shell_t shell,
    mavsdk_shell_receive_callback_t callback,
    void* user_data);

/**
 * @brief Unsubscribe from 'receive' updates.
 *
 * Stops the subscription and frees resources associated with the handle.
 *
 * @param shell The shell instance.
 * @param handle The subscription handle returned by mavsdk_shell_subscribe_receive().
 */
CMAVSDK_EXPORT void mavsdk_shell_unsubscribe_receive(
    mavsdk_shell_t shell,
    mavsdk_shell_receive_handle_t);


#ifdef __cplusplus
}
#endif

#endif // CMAVSDK_SHELL_H