py/mavsdk/mavsdk/plugins/shell/shell.py

# ruff: noqa: F401

# WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
# Edits need to be made to the proto files
# (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/shell/shell.proto)

"""
Allow to communicate with the vehicle's system shell.

 Under the hood this uses MAVLink SERIAL_CONTROL. The default device is
 SERIAL_CONTROL_DEV_SHELL. Callers can pass another SERIAL_CONTROL_DEV on
 Send (and observe the device on Receive) when the same framing is used for
 non-nsh serial bridges (for example TELEM2).
"""

import atexit
import ctypes

from typing import Callable, Any
from enum import IntEnum

from ...cmavsdk_loader import _cmavsdk_lib


# ===== Enums =====
class Device(IntEnum):
    """MAVLink SERIAL_CONTROL_DEV values used by the shell plugin."""
    TELEM1 = 0
    TELEM2 = 1
    GPS1 = 2
    GPS2 = 3
    SHELL = 4
    SERIAL0 = 5
    SERIAL1 = 6
    SERIAL2 = 7
    SERIAL3 = 8
    SERIAL4 = 9
    SERIAL5 = 10
    SERIAL6 = 11
    SERIAL7 = 12
    SERIAL8 = 13
    SERIAL9 = 14


# ===== Result Enums =====
class ShellResult(IntEnum):
    """Possible results returned for shell requests"""
    UNKNOWN = 0
    SUCCESS = 1
    NO_SYSTEM = 2
    CONNECTION_ERROR = 3
    NO_RESPONSE = 4
    BUSY = 5
    INVALID_ARGUMENT = 6


# ===== Internal C Structures =====
class ReceiveCStruct(ctypes.Structure):
    """
    Internal C structure for Receive.
    Used only for C library communication.
    """
    _fields_ = [
        ("data", ctypes.c_char_p),
        ("device", ctypes.c_int),
    ]


# ===== Structures =====
class Receive:
    """
    
    """

    def __init__(self, data=None, device=None):
        self.data = data
        self.device = device

    @classmethod
    def from_c_struct(cls, c_struct):
        """Convert from C structure to Python object"""
        instance = cls()
        instance.data = c_struct.data.decode('utf-8')
        instance.device = (c_struct.device)
        return instance

    def to_c_struct(self):
        """Convert to C structure for C library calls"""
        c_struct = ReceiveCStruct()
        c_struct.data = self.data.encode('utf-8')
        c_struct.device = int(self.device)
        return c_struct

    def __str__(self):
        fields = []
        fields.append(f"data={self.data}")
        fields.append(f"device={self.device}")
        return f"Receive({', '.join(fields)})"



# ===== Plugin =====
class Shell:
    """Allow to communicate with the vehicle's system shell.

 Under the hood this uses MAVLink SERIAL_CONTROL. The default device is
 SERIAL_CONTROL_DEV_SHELL. Callers can pass another SERIAL_CONTROL_DEV on
 Send (and observe the device on Receive) when the same framing is used for
 non-nsh serial bridges (for example TELEM2)."""

    def __init__(self, system):
        self._lib = _cmavsdk_lib
        self._handle = None
        self._callbacks = []  # Keep references to prevent GC

        if system is None:
            raise ValueError("system cannot be None")

        system_handle = system._handle

        if not system_handle:
            raise ValueError("system handle is null")

        self._handle = self._lib.mavsdk_shell_create(system_handle)

        if not self._handle:
            raise RuntimeError("Failed to create Shell plugin - C function returned null handle")

        system._track_plugin(self)
        atexit.register(self.destroy)



    def send(self, command, device):
        """Get send (blocking)"""


        result_code = self._lib.mavsdk_shell_send(
            self._handle,
            command.encode('utf-8') if isinstance(command, str) else command,
            device,
        )
        result = ShellResult(result_code)
        if result != ShellResult.SUCCESS:
            raise Exception(f"send failed: {result}")

        return result


    def subscribe_receive(self, callback: Callable, user_data: Any = None):
        """Receive feedback from a sent command line.

 This subscription needs to be made before a command line is sent, otherwise, no response will be sent."""

        def c_callback(c_data, ud):
            try:

                py_data = Receive.from_c_struct(c_data)

                self._lib.mavsdk_shell_receive_destroy(ctypes.byref(c_data))

                callback(py_data, user_data)

            except Exception as e:
                print(f"Error in receive callback: {e}")

        cb = ReceiveCallback(c_callback)
        self._callbacks.append(cb)

        return self._lib.mavsdk_shell_subscribe_receive(
            self._handle,
            cb,
            None
        )

    def unsubscribe_receive(self, handle: ctypes.c_void_p):
        """Unsubscribe from receive"""
        self._lib.mavsdk_shell_unsubscribe_receive(
            self._handle, handle
        )



    def destroy(self):
        """Destroy the plugin instance"""
        if self._handle:
            self._lib.mavsdk_shell_destroy(self._handle)
            self._handle = None

    def __del__(self):
        self.destroy()

# ===== Callback Types =====
ReceiveCallback = ctypes.CFUNCTYPE(
    None,
    ReceiveCStruct,
    ctypes.c_void_p
)

# ===== Setup Functions =====
_cmavsdk_lib.mavsdk_shell_create.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_shell_create.restype = ctypes.c_void_p

_cmavsdk_lib.mavsdk_shell_destroy.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_shell_destroy.restype = None

_cmavsdk_lib.mavsdk_shell_receive_destroy.argtypes = [
    ctypes.POINTER(ReceiveCStruct)
]
_cmavsdk_lib.mavsdk_shell_receive_destroy.restype = None

_cmavsdk_lib.mavsdk_shell_receive_array_destroy.argtypes = [
    ctypes.POINTER(ctypes.POINTER(ReceiveCStruct)),
    ctypes.c_size_t
]
_cmavsdk_lib.mavsdk_shell_receive_array_destroy.restype = None


_cmavsdk_lib.mavsdk_shell_string_destroy.argtypes = [
    ctypes.POINTER(ctypes.c_char_p)
]
_cmavsdk_lib.mavsdk_shell_string_destroy.restype = None


_cmavsdk_lib.mavsdk_shell_send.argtypes = [
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_int,
]

_cmavsdk_lib.mavsdk_shell_send.restype = ctypes.c_int
_cmavsdk_lib.mavsdk_shell_subscribe_receive.argtypes = [
    ctypes.c_void_p,
    ReceiveCallback,
    ctypes.c_void_p
]

_cmavsdk_lib.mavsdk_shell_subscribe_receive.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_shell_unsubscribe_receive.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p
]

_cmavsdk_lib.mavsdk_shell_unsubscribe_receive.restype = None

